2006-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpselectiontool.c (gimp_selection_tool_modifier_key):
	When Alt is down, don't allow other modifiers to change the
	operation shown in the options.  Fixes bug #349338.
	
2006-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpchannel-select.[ch]: add push_undo arguments
	to several gimp_channel_select_foo functions.

	* app/actions/vectors-commands.c
	* app/core/gimpchannel-select.c
	* app/core/gimpchannel-select.h
	* app/pdb/paths_cmds.c
	* app/pdb/selection_tools_cmds.c
	* app/pdb/vectors_cmds.c
	* app/tools/gimpellipseselecttool.c
	* app/tools/gimpfreeselecttool.c
	* app/tools/gimprectangleselecttool.c
	* app/tools/gimpvectortool.c
	* tools/pdbgen/pdb/paths.pdb
	* tools/pdbgen/pdb/selection_tools.pdb
	* tools/pdbgen/pdb/vectors.pdb:  add push_undo argument
	to function calls where needed.

2006-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpnavigationeditor.c: put zoom label next to
	scrollbar instead of above it; fixes bug #346880.
	
2006-08-25  Sven Neumann  <sven@gimp.org>

	* docs/gimp.1.in: updated the URL of the user manual.

2006-08-25  Sven Neumann  <sven@gimp.org>

	* configure.in: print the value of $datarootdir in the summary.

	* app/base/tile-swap.c (tile_swap_in_attempt): fixed error
	handling in this unused function.

2006-08-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c (file_actions_setup)
	(file_actions_last_opened_update): if there are too few images in
	the document history, use the action's name as label for the empty
	slots, to keep the translation of "" from showing up in the
	shortcut editor.

2006-08-24  Sven Neumann  <sven@gimp.org>

	* desktop/gimp.desktop.in.in (Categories): removed "Application"
	which is not any longer in the Desktop Menu spec.

2006-08-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.c
	* plug-ins/winicon/icosave.c: fixed handling of indexed images
	(bug #342883).
